--- a/Frontend/PaginaFrontal/css/main.css
+++ b/Frontend/PaginaFrontal/css/main.css
@@ -5,7 +5,7 @@
   --primary-dark: #45a049;
   --secondary: #2e7d32;
   --accent: #81c784;
-  --dark: #111;
+  --dark: #000 ;
   --light: #f7f7f7;
   --gray: #666;
   --gray-light: #e0e0e0;
@@ -56,7 +56,7 @@ a {
   position: sticky;
   top: 0;
   z-index: 999;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 10px rgb(0, 0, 0);
 }
 
 .header-left {
@@ -105,7 +105,7 @@ a {
 .header-nav a:hover,
 .header-nav a.active {
   color: var(--white);
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgb(0, 0, 0);
 }
 
 .header-right {
@@ -117,8 +117,8 @@ a {
 .header-search {
   display: flex;
   align-items: center;
-  background-color: rgba(255,255,255,0.1);
-  border: 1px solid rgba(255,255,255,0.2);
+  background-color: rgb(0, 0, 0);
+  border: 1px solid rgb(0, 0, 0);
   border-radius: 20px;
   padding: 0.4rem 1rem;
   gap: 0.5rem;
@@ -1503,7 +1503,7 @@ a {
   position: sticky;
   top: 0;
   z-index: 999;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 10px rgb(0, 0, 0);
 }
 
 .header-left {
@@ -2378,7 +2378,7 @@ a {
   .header-nav a {
     display: block;
     padding: 1rem;
-    border-bottom: 1px solid rgba(255,255,255,0.1);
+    border-bottom: 1px solid rgb(0, 0, 0);
   }
   
   .header-search {
