--- a/Frontend/PaginaFrontal/css/Header.css
+++ b/Frontend/PaginaFrontal/css/Header.css
@@ -48,7 +48,7 @@
      font-weight: 500;
      border-radius: 6px;
      transition: var(--transition);
-}
+}   
  .header-nav a:hover, .header-nav a.active {
      color: var(--white);
      background-color: rgb(0, 0, 0);
@@ -86,6 +86,7 @@
 /* Botões Header */
  .btn-primary, .btn-secondary {
      padding: 0.6rem 1.2rem;
+     margin-left: 10px;
      border: none;
      border-radius: 6px;
      font-weight: 600;
@@ -99,6 +100,8 @@
  .btn-primary:hover {
      background-color: var(--primary-dark);
      transform: translateY(-2px);
+     outline: 2px solid var(--dark);
+     color: var(--dark);
 }
  .btn-secondary {
      background-color: transparent;
