--- a/Frontend/PaginaFrontal/css/main.css
+++ b/Frontend/PaginaFrontal/css/main.css
@@ -2,7 +2,7 @@
 /* ========== RESET E VARIÁVEIS ========== */
  :root {
     /* Cores principais */
-     --primary: #222222;
+     --primary: #000000;
     /* Botões e destaques principais (preto escuro) */
      --primary-dark: #ffffff;
     /* Hover ou estados ativos (preto puro) */
@@ -1493,8 +1493,10 @@
      transition: var(--transition);
      margin-bottom: 1rem;
 }
- .btn-checkout:hover {
+.btn-checkout:hover {
      background-color: var(--primary-dark);
+     color: var(--dark);
+     outline: 2px solid var(--dark);
      transform: translateY(-2px);
      box-shadow: var(--shadow);
 }
@@ -1561,7 +1563,7 @@
  .auth-modal-content h3 {
      font-size: 1.8rem;
      margin-bottom: 1rem;
-     color: var(--primary);
+     color: var(--gray);
 }
  .auth-modal-content p {
      margin-bottom: 2rem;
@@ -2967,4 +2969,10 @@
          grid-template-columns: 1fr;
     }
 }
- 
+ .qty-input {
+  width: 50px;
+  text-align: center;
+  border: 1px solid #000;
+  font-size: 14px;
+  padding: 4px;
+}
