--- a/Frontend/PaginaFrontal/css/main.css
+++ b/Frontend/PaginaFrontal/css/main.css
@@ -62,7 +62,7 @@
      position: sticky;
      top: 0;
      z-index: 999;
-     box-shadow: 0 2px 10px rgb(0, 0, 0);
+    
 }
  .header-left {
      display: flex;
@@ -2975,4 +2975,42 @@
   border: 1px solid #000;
   font-size: 14px;
   padding: 4px;
+}
+.user-dropdown {
+  position: absolute;
+  top: 48px;
+  right: 48px;
+  background: #fff;
+  border: 2px solid #000;
+  min-width: 180px;
+  z-index: 1000;
+}
+
+.user-dropdown.hidden {
+  display: none;
+}
+
+.user-dropdown .dropdown-title {
+  padding: 10px;
+  font-weight: bold;
+  border-bottom: 2px solid #000;
+  color: #000;
+}
+
+.user-dropdown ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.user-dropdown li a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #000;
+}
+
+.user-dropdown li a:hover {
+  background: #000;
+  color: #fff;
 }
